# veritrust

./: .env.example  CLAUDE.md  Caddyfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  prueba.txt  pyproject.toml  requirements.txt
.claude/: settings.json
backend/: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  worker.py
backend/app/agents/: __init__.py  errors.py  extractor.py  health_expert.py  investigator.py  main.py  relevance.py  sanitize.py  translator.py
backend/app/api/: cors.py  database.py  router.py  schemas.py  utils.py
backend/app/api/dependencies/: __init__.py  check_rate_limit.py  get_current_user.py
backend/app/api/routes/: __init__.py  analysis.py  dashboard.py  health.py  history.py  share.py
backend/app/core/: __init__.py  config.py  cors.py  credibility.py  errors.py  logging.py
backend/app/db/: __init__.py  dashboard.py  history.py  main.py  pool.py
backend/app/prompts/: agents.py  prompts.yaml
backend/app/schemas/: __init__.py  analysis.py  dashboard.py  errors.py  history.py
backend/app/tests/integration/: test_api_server.py  test_graph_main.py  test_model_tool.py
backend/app/tests/unit/: test_api_auth.py  test_api_schemas.py  test_database_helpers.py
backend/app/tools/: model_tool.py
backend/app/utils/: europepmc.py  extract_text_from_file.py  extract_text_from_pdf.py  extract_text_from_url.py  ollama.py  start_ollama.py
backend/data/: pubhealth_validation.parquet
backend/db/: init.sql
backend/db/migrations/: 0001_async_analysis_status.sql  0002_claims.sql  0003_sources.sql
backend/ml/evaluation/: evaluate_factcheck.py  evaluate_pipeline.py
backend/ml/notebooks/: eda.ipynb  evaluation.ipynb
backend/ml/tests/unit/: test_evaluate_factcheck.py  test_evaluate_pipeline.py  test_load_data.py  test_preprocess.py  test_train.py
backend/ml/training/: train.py
backend/ml/utils/: __init__.py  load_data.py  preprocess.py  text.py
backend/src/agents/: extractor.py  health_expert.py
backend/src/api/: database.py  messages.py  router.py  schemas.py  server.py  utils.py
backend/src/api/routes/: analysis.py  dashboard.py  history.py
backend/src/models/: train.py
backend/src/notebooks/: evaluation.ipynb
backend/src/tests/integration/: test_agents_contracts.py  test_api_server.py  test_model_tool.py
backend/src/tests/unit/: test_api_auth.py  test_api_schemas.py  test_database_helpers.py  test_load_data.py  test_preprocess.py  test_start_ollama.py
backend/src/utils/: __init__.py  extract_text_from_url.py  start_ollama.py
backend/tests/integration/: test_agents_contracts.py  test_api_server.py  test_graph_main.py  test_model_tool.py  test_worker.py
backend/tests/unit/: test_api_auth.py  test_api_schemas.py  test_config.py  test_credibility.py  test_database_helpers.py  test_europepmc.py  test_evidence_blend.py  test_extract_text_from_file.py  test_extract_text_from_pdf.py  test_extract_text_from_url.py  test_investigator.py  test_relevance.py  test_start_ollama.py
data/: pubhealth_test.parquet
docs/: deploy-backups.md  deploy-env.md  deploy-model.md  deploy-ops.md
frontend/: .dockerignore  (+9 more)
(+213 files in other folders)
