[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tfg"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.135",
    "uvicorn[standard]>=0.41",
    "python-multipart>=0.0.22",
    "python-dotenv>=1.2",
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "httpx>=0.28",

    # Auth
    "PyJWT>=2.12",
    "cryptography>=46",

    # Database
    "psycopg2>=2.9",

    # LLM / Agents
    "langchain>=1.2",
    "langchain-core>=1.2",
    "langchain-ollama>=1.0",
    "langgraph>=1.0",
    "ollama>=0.6",

    # ML
    "transformers>=5.2",
    "torch>=2.10",
    "accelerate>=1.12",
    "scikit-learn>=1.8",
    "numpy>=2.4",
    "pandas>=3.0",
    "pyarrow>=23",

    # Web scraping
    "beautifulsoup4>=4.14",
    "requests>=2.32",

    # Utilities
    "PyYAML>=6.0",
    "orjson>=3.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "coverage>=7.13",
    "ruff>=0.8",
    "mypy>=1.13",
    "matplotlib>=3.10",
    "seaborn>=0.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "ml*"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv", "models", "results", "data", "**/*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]  # line length is enforced by the formatter

[tool.ruff.lint.per-file-ignores]
# These modules manipulate sys.path before importing app/ml so the file can
# also be executed as a script. The imports below the sys.path block are
# intentional, not lint violations.
"app/agents/main.py" = ["E402"]
"app/agents/health_expert.py" = ["E402"]
"ml/evaluation/evaluate_factcheck.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
files = ["app", "ml"]
exclude = "(^|/)(\\.venv|models|results|data|tests)(/|$)"
